--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-01-27  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/op_time.cpp: small hacky output cleanup
+ 
 2002-01-27  Philippe Elie  <ph_e@club-internet.fr>
 
 	* TODO: update
