--- a/TODO
+++ b/TODO
@@ -35,6 +35,7 @@ Before 1.0
  o check chroot() processes and the path hash stuff
  o use nm and a little script to track unused function
  o audit to track unnecessary include <>
+ o cleanup cache things in compat22.h, add and use cache_line_aligned_in_smp
  o gcc 3.0 compile.
 
 Later
