--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2002-01-27  Philippe Elie  <ph_e@club-internet.fr>
 
+	* module/Makefile.in: sorry, -Werror is only usefull
+	  for test.
+
 	* doc/oprofile.1.in: a few words about op_stop
 
 	* module/compat.h:
