module: add support for 2.5.3 (REMAP_PAGE_RANGE macro) - only a few test make, the wake-up path has changed in kernel/sched.c, it seems ok at my eyes

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-02-01  Philippe Elie  <ph_e@club-internet.fr>
+
+	* module/compat.h: define REMAP_PAGE_RANGE
+	* module/op_syscalls.c: use it (2.5.3 support)
+
 2002-01-30  Philippe Elie  <ph_e@club-internet.fr>
 
 	* module/compat.h:
