--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-02-03  John Levon  <moz@compsoc.man.ac.uk>
+
+	* configure.in: bump to 0.1
+
+	* TODO: update
+ 
 2002-02-02  John Levon  <moz@compsoc.man.ac.uk>
 
 	* configure.in: bump to 0.0.9
