--- a/TODO
+++ b/TODO
@@ -7,12 +7,11 @@
    artificially created symbols
    these two todo are perhaps worthwhile to implement now. The new filtering
    of symbols make them less interesting.
- o --help --version in a common options section in .sgml ?
-   same thing for all common options between oprofpp/op_to_source ?
  o remove note lock (and rename map lock) ... I think
  o should we pin rather than loop sample buffer overflow too ?
  o cleanup cache things in compat22.h, add and use cache_line_aligned_in_smp
- o improve format of oprofpp output etc.
+ o improve format of oprofpp output etc. The necessary stuff is in cvs now. It
+  need to be tuned and used for oprofpp -L -s
  o check than all post-profiles tools show version nr in the same way and document it
  
  
@@ -45,6 +44,7 @@ Before 1.0
   first from where come the overhead (read/write RTC CMOS is costly)
  o gcc 3.0/3.1 compile. (3.1 is not stable currently but I follow it, Phil)
  o determine where we need preempt_disable/enable to prevent pre-emption + test
+ o thread profiling in the old and new flavour (2.5 introduce a new thread handling)
 
 Later
 -----
