--- a/TODO
+++ b/TODO
@@ -9,10 +9,7 @@
    of symbols make them less interesting.
  o should we pin rather than loop sample buffer overflow too ?
  o cleanup cache things in compat22.h, add and use cache_line_aligned_in_smp
- o improve format of oprofpp output etc. The necessary stuff is in cvs now. It
-  need perhaps to be tuned.
- o check than all post-profiles tools show version nr in the same way and document it
- 
+ o check oprofpp output/op_time format
  o test note_lock changes
  
 Before 1.0
