--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-04  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/oprofpp_util.cpp: welcome in the local symbols ...
+ 
 2002-03-03  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opf_filter.h:
@@ -101,7 +105,7 @@
 
 	* module/compat.h: support for 2.5.5. 2.4.18 also tested
 
-	* pp/opp_symbol.h
+	* pp/opp_symbol.h:
 	* pp/opp_symbol.cpp: new, mainly for implementing --output-format
 	* pp/op_time.cpp:
 	* pp/oprofpp.cpp: use output format stuff
