--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-06  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+ 
 2002-03-06  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/opfropp_util.cpp: more specific error messages
