minor. OK Phil fix those bugs I asked you about and we're ready to roll right ?
I haven't come across any obvious problems.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2002-03-07  John Levon  <moz@compsoc.man.ac.uk>
+
+	* TODO: update
+
+	* pp/: use "invalid" not "illegal"
+ 
 2002-03-06  John Levon  <moz@compsoc.man.ac.uk>
 
 	* TODO: update
