--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-09  John Levon  <moz@compsoc.man.ac.uk>
+
+	* doc/oprofile.sgml: some laptops have a usable local APIC
+ 
 2002-03-09  Philippe Elie  <ph_e@club-internet.fr>
 
 	* oprof_report: new directory, oprofpp/op_time like GUI
