--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2002-03-17  John Levon  <moz@compsoc.man.ac.uk>
+
+	* pp/oprofpp_util.cpp: clarify binutils bug workaround
+ 
 2002-03-17  Philippe Elie  <ph_e@club-internet.fr>
 
 	* oprof_report/op_view.h:
