--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2002-03-19  John Levon  <moz@compsoc.man.ac.uk>
+
+	* module/op_fixmap.c: include pagemap.h, so
+	we pick up highmem.h, which is needed with
+	some kernels (missing kmap_pagetable define
+	via pte_offset)
+ 
 2002-03-18  Philippe Elie  <ph_e@club-internet.fr>
 
 	* pp/op_time.cpp:
