--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2002-04-02  Philippe Elie  <phil.el@wanadoo.fr>
+
+	* oprofpp.cpp:
+	* oprofp_util.cpp: debug and use opp_bfd::symbol_size()
+
 2002-03-30  Philippe Elie  <phil.el@wanadoo.fr>
 
 	* ChangeLog: change my email address
